<resources>
    <string name="app_name">mini2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in Here</string>
    <string name="login_in">Login In</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="rese">Forgot password??</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">reset password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="intelligentcrop">Intelligent Crop.</string>
    <string name="todo">TODO</string>
    <string name="first_menu">First Menu</string>
    <string name="second_menu">Second Menu</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="prof">profile</string>
    <string name="wellcome">Wellcome</string>
    <string name="title_activity_example">Example</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="led1_text">Toggle Pump</string>
    <string name="action_settings">Settings</string>
</resources>
